# HPC2k25

./: .gitignore  README.md
Lab1/: hello_world.cpp  mat_mult.cpp
Lab10/: blas-dmmmult.cpp  laplace-common.cpp  laplace-seq.cpp
Lab11/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  nqueens.cpp  parfor.cpp  parfor_bis.cpp  tasks-trib.cpp
Lab12/: CMakeLists.txt  Makefile  nqueens.cpp  pardo.cpp  pardo_th_sp.cpp
Lab2/: Makefile  dft.cpp  dft.h5  dft.s  omp_speed.hpp  plot.py  plot_dft.cpp
Lab3/stencil/: Makefile  stencil.cu
Lab4/raytrace/: raytrace.cu
Lab4/synchro/: sharedsum.cu
Lab4/texture/: textureheat.cu
Lab5/plm/: plm.cu
Lab5/streams/: double.cu  single.cu
Lab6/: a.out  profile.ncu-rep  transpose.cu
Lab7/: Makefile  ring.c  stderr.txt  stdout.txt  submit.sl  test_band.c
Lab8/: Makefile  floyd-warshall-par.cpp  floyd-warshall-seq.cpp  graph-base.h  graph-utils-par.cpp
